# GradientMotionMultiplePlumes

./: .gitignore  README.md  REPRODUCE.md  REPRODUCE_FIGURES_1_3.md  environment.yml  pyproject.toml
config/: published_plot_config.yml
data/published_panel_tables/: fig2_glm_summary.csv  fig5e_cue_beta_complex_plume.csv  fig5e_cue_beta_smooth_plume.csv  fig5f_s5_model_comparison_complex_plume.csv  fig5f_s5_model_comparison_smooth_plume.csv
metadata/: figures_1_3.json  published_panel_params.json
scripts/: generate_figure1_summary.py  generate_figure2_summary.py  generate_figure3_summary.py  generate_published_summary_tables.py  plot_cue_beta_paper_panel.py  plot_cue_dominance_paper_panel.py  plot_total_differential_panels.py  render_published_behavior_panels.py  render_published_figure1.py  render_published_figure2.py  render_published_figure3.py  render_published_figures_1_3.py  train_figure3_models.py
src/gradient_motion_panels/: __init__.py  centerline_models.py  figure3_models.py  figure3_training.py  plume_fields.py  plume_sources.py  style.py  summary_tables.py
tests/: test_figure3_training.py  test_figures_1_3.py  test_published_behavior_panels.py
