[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gradient-motion-multiple-plumes"
version = "0.1.0"
description = "Publication panel reproduction code for GradientMotionMultiplePlumes."
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "pandas>=2.0",
    "pynwb>=3.1",
    "pyarrow>=14.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "pyyaml>=6.0",
    "seaborn>=0.12",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
figures123 = [
    "h5py>=3.9",
    "scikit-image>=0.21",
    "scikit-learn>=1.3",
    "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
